--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "aws-cdk-lib": "^2.185.0"
+    "aws-cdk-lib": "^2.185.0",
+    "aws-sdk": "^2.1692.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.13"
   }
 }
