--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "aws-cdk-lib": "^2.186.0",
-    "aws-sdk": "^2.1692.0"
+    "aws-sdk": "^2.1692.0",
+    "cdk-nag": "^2.35.59"
   },
   "devDependencies": {
     "@types/node": "^22.13.13"
